2000-08-31  Robey Pointer  <robey@eazel.com>

	* libgnomevfs/gnome-vfs-init.c: (gnome_vfs_initialized):
	* libgnomevfs/gnome-vfs-init.h:

	Add gnome_vfs_initialized so you can check if gnome-vfs has been
	initialized already, without it whining.
	
2000-08-31  Gene Z. Ragan  <gzr@eazel.com>

	* libgnomevfs/gnome-vfs-backend.c: (gnome_vfs_backend_loadinit),
	(gnome_vfs_backend_shutdown), (func_lookup):
	* libgnomevfs/gnome-vfs-init.c: (gnome_vfs_init):
	Checking on some Pavel code cleanup.
	
2000-08-31  John Sullivan  <sullivan@eazel.com>

	Work towards bug 1037 (use "folder" rather than "directory"
	consistently)

	* data/mime/gnome-vfs.keys: Change "directory" to "folder"
	and "web directory" to "web folder"

2000-08-31  Gene Z. Ragan  <gzr@eazel.com>

	* Makefile.am:
	Added capplet to sub-directories to fix tinderbox build.
	
2000-08-31  Ramiro Estrugo  <ramiro@eazel.com>

	* libgnomevfs/gnome-vfs-mime-info.c:
	(gnome_vfs_mime_info_shutdown):
	Fix two typos.  The same 2 hash tables were being freed twice.
	Also make the hash tables NULL after freeing them.
	
2000-08-31  Martin Baulig  <baulig@suse.de>

	* configure.in: Don't modify CFLAGS but set VFS_CLFAGS instead.
	Otherwise CFLAGS gets longer every time config.status is run.
	* */Makefile.am (INCLUDES): Add $(VFS_CFLAGS).

	* configure.in: Don't put -Werror into CFLAGS but into WERROR
	and AC_SUBST it. Some configure checks don't work with -Werror.
	* */Makefile.am (INCLUDES): Add $(WERROR).

2000-08-31  Martin Baulig  <baulig@suse.de>

	* libgnomevfs-pthread/gnome-vfs-job-slave.c
	(gnome_vfs_thread_backend_shutdown): Use g_main_iteration() instead
	of gtk_main_iteration_do() if `GNOME_PLATFORM_VERSION >= 1095000'
	(as preprocessor conditional).

	* libgnomevfs/gnome-vfs-private-utils.c
	(gnome_vfs_i18n_get_language_list): New function.  This calls
	gnome_i18n_get_language_list() if `GNOME_PLATFORM_VERSION < 1095000'
	and g_i18n_get_language_list() otherwise.
